--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,24 @@ nav {
     bottom: unset;
   }
 }
+
+.basket-list {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  width: 50rem;
+  min-width: 95%;
+  box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.5);
+}
+.basket-close {
+  cursor: pointer;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  color: #fff;
+}
+.basker-delete {
+  cursor: pointer;
+}
