--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,16 @@ nav {
   }
 }
 
+.bsk {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+
 .basket-list {
   position: fixed;
   top: 50%;
@@ -51,6 +61,7 @@ nav {
   width: 50rem;
   min-width: 95%;
   box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.5);
+  animation: show 0.5s ease-in-out;
 }
 .basket-close {
   cursor: pointer;
@@ -61,4 +72,18 @@ nav {
 }
 .basker-delete {
   cursor: pointer;
+}
+@keyframes show {
+  from {
+    top: 70%;
+    opacity: 0;
+  }
+  to {
+    top: 50%;
+    opacity: 1;
+  }
+}
+.btnq {
+  position: relative;
+  bottom: 10px;
 }
